# technical-assessment-2027-07-06

./: .env  .gitignore  Dockerfile  INFRASTRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: analysis.py  chat.py  config.py  db.py  explain.py  ingestion.py  main.py  models.py  repository.py  scheduler.py  stock_service.py
app/news/: base.py  classifier.py  composite_provider.py  exa_provider.py  newsapi_provider.py  yfinance_provider.py
scripts/: infra.sh
tests/: test_analysis.py  test_ingestion.py  test_news_providers.py  test_repository.py  test_stock_service.py
