[project]
name = "stock-move-explainer"
version = "0.1.0"
description = "Explains major single-day stock price moves using related news, via a small FastAPI service."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "yfinance==1.2.0",
    "pandas==2.2.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "anthropic==0.34.2",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "sqlalchemy==2.0.35",
    "psycopg2-binary==2.9.9",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
]
